<resources>
    <string name="app_name">Homework Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="app_version">version 1.1</string>
    <string name="contact_email">Email: hrqageneral@gamil.com\n</string>
    <string name="task_pending">Pending</string>
    <string name="task_completed">Completed</string>
    <string-array name="type_array">
        <item>Homework</item>
        <item>Lab</item>
        <item>Exam</item>
        <item>Other</item>
    </string-array>
    <string-array name="type_array_linked">
        <item>Homework</item>
        <item>Lab</item>
        <item>Exam</item>
        <item>Other</item>
    </string-array>
    <string-array name="subject_array">
        <item>Default subject</item>
        <item>Create new</item>
    </string-array>
    <string-array name="reminder_select_array">
        <item>3 weeks before</item>
        <item>2 weeks before</item>
        <item>1 week before</item>
        <item>3 days before</item>
        <item>2 days before</item>
        <item>24 hours before</item>
        <item>12 hours before</item>
        <item>8 hours before</item>
        <item>4 hours before</item>
        <item>2 hours before</item>
        <item>1 hour before</item>
        <item>30 minutes before</item>
        <item>10 minutes before</item>
    </string-array>
    <string-array name="home_drawer">
        <item>Upcoming </item>
        <item>Subjects </item>
        <item>View all </item>
        <item>Calendar </item>
        <item>Completed </item>
    </string-array>
    <string name="drawer_open">OPEN_DRAWER</string>
    <string name="drawer_close">CLOSE_DRAWER</string>
    <string name="settings_title">Settings</string>
    <string name="add_title">New Task</string>
    <string name="pref_app_settings">App settings</string>
    <string name="pref_reminder_sound_enable">Reminder sound</string>
    <string name="pref_reminder_sound_enable_summary">Enable reminder sound</string>
    <string-array name="default_reminder_values">
        <item>1 </item>
        <item>2 </item>
        <item>3 </item>
        <item>7 </item>
    </string-array>
    <string-array name="default_reminder">
        <item>1 day before the due time </item>
        <item>2 days before the due time </item>
        <item>3 days before the due time </item>
        <item>1 week before the due time </item>
    </string-array>
    <string-array name="interval_array">
        <item>Every week </item>
        <item>Every two weeks </item>
        <item>Every three weeks</item>
        <item>Every day </item>
        <item>Every two days </item>
        <item>Every three days </item>
        <item>Every four days </item>
        <item>Every five days </item>
    </string-array>
    <string-array name="amount_array">
        <item>2 </item>
        <item>3 </item>
        <item>4 </item>
        <item>5 </item>
        <item>6 </item>
        <item>7 </item>
        <item>8 </item>
        <item>9 </item>
        <item>10 </item>
        <item>11 </item>
        <item>12 </item>
        <item>13 </item>
        <item>14 </item>
        <item>15 </item>
        <item>16 </item>
        <item>17 </item>
        <item>18 </item>
        <item>19 </item>
        <item>20 </item>
        <item>25 </item>
        <item>30 </item>
        <item>35 </item>
        <item>40 </item>
        <item>45 </item>
        <item>50 </item>
    </string-array>
        <string-array name="indexing_array">
        <item>Disable indexing </item>
        <item>Start from 0 </item>
        <item>Start from 1 </item>
    </string-array>
    <string-array name="postlab_array">
        <item>Not specified </item>
        <item>1 day after the lab </item>
        <item>2 days after the lab </item>
        <item>3 days after the lab </item>
        <item>1 week after the lab </item>
        <item>2 weeks after the lab </item>
        <item>3 weeks after the lab </item>
    </string-array>
    <string name="pref_startup_screen_title">Choose startup screen</string>
    <string name="pref_startup_screen_summary">When the App launches, go to </string>
    <string name="pref_upcoming_date_title">Upcoming task(s) customization </string>
    <string name="pref_default_reminder">Default reminder</string>
    <string name="pref_default_reminder_summary">Set a default reminder</string>
	<string-array name="startup_entries">
        <item>Upcoming</item>
        <item>Subjects</item>
        <item>View all</item>
        <item>Calendar</item>
        <item>Completed</item>
    </string-array>
    <string-array name="startup_entryValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="upcoming_date_entries">
        <item>Display task(s) due in the next 3 days</item>
        <item>Display task(s) due in the next 5 days</item>
        <item>Display task(s) due in the next 7 days</item>
        <item>Display task(s) due in the next 14 days</item>
        <item>Display task(s) due in the next 21 days</item>
    </string-array>
    <string-array name="upcoming_date_entryValues">
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>14</item>
        <item>21</item>
    </string-array>
	<string name="swipelistview_license">
		Copyright 2014 Xuefei Han\n
		Licensed under the Apache License, Version 2.0 (the "License");
		you may not use this file except in compliance with the License.
		You may obtain a copy of the License at
		http://www.apache.org/licenses/LICENSE-2.0
 		\n
		Unless required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS" BASIS,
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
		See the License for the specific language governing permissions and
		limitations under the License.
	</string>
	<string name="text_islinked">Repeating task</string>
	<string name="text_linked_amount">Amount:</string>
	<string name="text_linked_interval">Interval:</string>
	<string name="text_linked_autoindex">Indexing:</string>
	<string name="text_save">Save</string>
	<string name="text_ok">OK</string>
	<string name="text_cancel">Cancel</string>
	<string name="text_edit">Edit</string>
	<string name="text_delete">Delete</string>
	<string name="text_yes">Yes</string>
	<string name="text_no">No</string>
	<string name="dialog_LinkedChange_title">Editing Repeating Tasks</string>
	<string name="dialog_LinkedChange_DuedateChange">You are changing the due date of a repeating task, would you like to reflect this change to its following task(s) to maintain the original interval?</string>
	<string name="dialog_LinkedChange_ContentChange">Apply changes to future occurrences? (Changes in Name and Notes will not be applied)</string>
	<string name="dialog_LinkedDelete_title">Deleting Repeating Tasks</string>
	<string name="dialog_LinkedDelete_ContentChange">Delete all repeating tasks?</string>
	<string name="dialog_linked_save_title">Save tasks</string>
	<string name="dialog_linked_save_msg">Saving</string>
	<string name="dialog_linked_delete_title">Delete tasks</string>
	<string name="dialog_linked_delete_msg">Deleting</string>
	<string name="add_new_subject">New Subject</string>
	<string name="color_default">Default</string>
	<string name="color_green">Green</string>
	<string name="color_blue">Blue</string>
	<string name="color_orange">Orange</string>
	<string name="color_yellow">Yellow</string>
	<string name="color_lime">Lime</string>
	<string name="color_purple">Purple</string>
	<string name="color_grey">Grey</string>
	<string name="color_pink">Pink</string>
	<string name="color_teal">Navy</string>
	<string name="pref_color_scheme_title">Color scheme</string>
	<string-array name="color_scheme_entries">
	    <item>Default</item>
	    <item>Green</item>
	    <item>Blue</item>
	    <item>Orange</item>
	    <item>Yellow</item>
	    <item>Lime</item>
	    <item>Purple</item>
	    <item>Grey</item>
	    <item>Pink</item>
	    <item>Navy</item>
	</string-array>
	<string name="extension_no_completed_task">You don\'t have any completed task(s)</string>
	<string name="extension_no_task">You don\'t have any task(s)</string>
</resources>