<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/about_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/charcoal" />

        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/charcoal" />

        <TextView
            android:id="@+id/about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contact_email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/charcoal" />

        <TextView
            android:id="@+id/about_listview_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/swipelistview_license"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/charcoal"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>