<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_linked_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/element_padding"
        android:gravity="start"
        android:text="@string/text_linked_amount"
        android:textColor="@color/mat_grey_superdark"
        android:textSize="@dimen/typo_univ"
        android:textStyle="normal" />

    <Spinner
        android:id="@+id/linked_amount_spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/element_padding"
        android:layout_toRightOf="@id/tv_linked_amount"
        android:layout_alignBaseline="@id/tv_linked_amount"
        android:spinnerMode="dropdown"
        android:textColor="@drawable/custom_add_page_text" />

    <TextView
        android:id="@+id/tv_linked_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_linked_amount"
        android:layout_marginLeft="@dimen/element_padding"
        android:gravity="start"
        android:text="@string/text_linked_interval"
        android:textColor="@color/mat_grey_superdark"
        android:textSize="@dimen/typo_univ"
        android:textStyle="normal" />

    <Spinner
        android:id="@+id/linked_interval_spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/linked_amount_spinner"
        android:layout_below="@id/linked_amount_spinner"
        android:layout_marginLeft="@dimen/element_padding"
        android:layout_toRightOf="@id/tv_linked_interval"
        android:layout_alignBaseline="@id/tv_linked_interval"
        android:spinnerMode="dropdown"
        android:textColor="@drawable/custom_add_page_text" />

    <TextView
        android:id="@+id/tv_linked_autoindex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_linked_interval"
        android:layout_marginLeft="@dimen/element_padding"
        android:gravity="start"
        android:text="@string/text_linked_autoindex"
        android:textColor="@color/mat_grey_superdark"
        android:textSize="@dimen/typo_univ"
        android:textStyle="normal" />

    <Spinner
        android:id="@+id/linked_autoindex_spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/linked_amount_spinner"
        android:layout_below="@id/linked_interval_spinner"
        android:layout_marginLeft="@dimen/element_padding"
        android:layout_toRightOf="@id/tv_linked_autoindex"
        android:layout_alignBaseline="@id/tv_linked_autoindex"
        android:spinnerMode="dropdown"
        android:textColor="@drawable/custom_add_page_text" />

</RelativeLayout>